kube/deployment-prod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docportal-app-deployment
  namespace: ${NAMESPACE}
spec:
  selector:
    matchLabels:
      app: docportal-app
  replicas: 1
  template:
    metadata:
      labels:
        app: docportal-app
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::710503867599:role/aws_gwre-ccs-dev_tenant_doctools_developer
    spec:
      containers:
        - name: docportal
          image: 710503867599.dkr.ecr.us-east-2.amazonaws.com/tenant-doctools-docportal:${TAG_VERSION}
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /alive
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 45
          readinessProbe:
            httpGet:
              path: /alive
              port: 8081
            initialDelaySeconds: 150
            periodSeconds: 45
          resources:
            requests:
              memory: "1Gi"
              cpu: "1"
            limits:
              memory: "1Gi"
              cpu: "1"
