kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeoktacontainer-app-deployment
  namespace: ${NAMESPACE}
spec:
  selector:
    matchLabels:
      app: nodeoktacontainer-app
  replicas: 2
  template:
    metadata:
      labels:
        app: nodeoktacontainer-app
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::627188849628:role/aws_gwre-ccs-dev_tenant_doctools_developer
    spec:
      containers:
      - name: nodeoktacontainer
        image: artifactory.guidewire.com/doctools-docker-dev/nodeoktacontainer:${TAG_VERSION}
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        livenessProbe:
          httpGet:
            path: /alive
            port: 8081
          initialDelaySeconds: 60
          periodSeconds: 45
        readinessProbe:
          httpGet:
            path: /alive
            port: 8081
          initialDelaySeconds: 150
          periodSeconds: 45
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
          limits:
            memory: "1Gi"
            cpu: "1"
      imagePullSecrets:
      - name: artifactory-secret
