kube/ingress-prod.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ${NAMESPACE}
  name: docportal-ingress
spec:
  rules:
  - host: docportal-${NAMESPACE}.us-east-2.service.guidewire.net
    http:
      paths:
      - backend:
          serviceName: docportal-app
          servicePort: 8081
        path: /
  - host: docportal-${NAMESPACE}.internal.us-east-2.service.guidewire.net
    http:
      paths:
      - backend:
          serviceName: docportal-app
          servicePort: 8081
        path: /
