kube/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ${NAMESPACE}
  name: docportal-ingress
spec:
  rules:
  - host: docs.${DEPLOY_ENV}.ccs.guidewire.net
    http:
      paths:
      - backend:
          serviceName: docportal-app
          servicePort: 8081
        path: /
